<resources>
    <string name="app_name">Tarea3smr</string>
    <string name="eliminar_pokemon">Permitir eliminar Pokémons</string>
    <string name="elim_pokemon_title_opciones">Eliminar Pokémons capturados</string>
    <string name="ajustes">Ajustes</string>
    <string name="idioma_titulo_ajustes">Idioma</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mis_pok_mons">Mis Pokémons</string>
    <string name="pok_dex">Pokédex</string>
    <string name="ajuste_button_menu">Ajustes</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="cerrar_y_salir_de_la_aplicaci_n">cerrar y salir de la aplicación</string>
    <string name="no">no</string>
    <string name="si">si</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="infromacion_desarrollador">aplicación desarrollada por Sonia Muñoz Romero. Versión 1.0</string>
    <string name="elige_un_idioma">elige un idioma</string>
    <string name="info_app">más información sobre la aplicación</string>
    <string name="confirmar_cierre">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="toastCierre">Se ha cerrado sesión correctamente</string>
    <string name="error_al_iniciar_sesi_n">Error al iniciar sesión</string>
    <string name="bienvenido">"Bienvenido "</string>
    <string name="imagen_del_pokemon">imagen del pokemon</string>
    <string name="nombre_pokemon">nombre pokemon</string>
    <string name="indice_del_pokemon">indice del pokemon</string>
    <string name="peso_del_pokemon">peso del pokemon</string>
    <string name="altura_pokemon">altura pokemon</string>
    <string name="tipo_o_tipos_del_pokemon">tipo o tipos del pokemon</string>
    <string name="has_seleccionado_a">"has seleccionado a "</string>
    <string name="nombre_pok_mon_capturado">Nombre Pokémon capturado</string>
    <string name="tipo_pok_mon_capturado">tipo Pokémon capturado</string>
    <string name="error_al_obtener_la_lista_de_pok_mon">Error al obtener la lista de Pokémon</string>
    <string name="error_en_la_respuesta_de_la_api">Error en la respuesta de la API</string>
    <string name="error_al_consultar_firebase">Error al consultar Firebase</string>
    <string name="error_al_obtener_los_documentos_de_firebase">Error al obtener los documentos de Firebase</string>
    <string name="error_en_la_llamada_a_la_api">Error en la llamada a la API</string>
    <string name="pok_mon">"Pokémon "</string>
    <string name="eliminado_correctamente">" eliminado correctamente"</string>
    <string name="error_al_eliminar_pok_mon">"Error al eliminar Pokémon "</string>
    <string name="mensaje_de_activacion_switch">Eliminación de Pokémon activada, podrá eliminar pokémons desde la lista Mis Pokémons</string>
    <string name="mensaje_desactivacion_switch">Eliminación de Pokémon desactivada, NO podrá eliminar pokémons desde la lista Mis pokémons</string>
    <string name="nombre_pok_mon_disponible">Nombre Pokémon disponible</string>
    <string name="imagen_del_pokemon_capturado">Imagen del pokemon capturado</string>
    <string name="eliminar_pok_mon">Eliminar Pokémon</string>
    <string name="este_pok_mon_ya_fue_capturado">¡Este Pokémon ya fue capturado!</string>
</resources>