<?xml version="1.0" encoding="utf-8"?><!--Diseño de la pantalla de detalles (orientacion Vertical)-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Imagen del pokemon-->
            <ImageView
                android:id="@+id/image_pokemon_detail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/imagen_del_pokemon"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintDimensionRatio="H,4:5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight="0.7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth="0.8" />

            <!--nombre del pokemon-->
            <TextView
                android:id="@+id/nombre_pokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_pokemon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_pokemon_detail" />

            <!--index del pokemon-->
            <TextView
                android:id="@+id/index_pokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indice_del_pokemon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nombre_pokemon" />

            <!--peso del pokemon-->
            <TextView
                android:id="@+id/peso_pokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso_del_pokemon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/index_pokemon" />

            <!--altura del pokemon-->
            <TextView
                android:id="@+id/altura_pokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altura_pokemon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/peso_pokemon" />

            <!--tipo(s) del pokemon-->
            <TextView
                android:id="@+id/tipo_pokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_o_tipos_del_pokemon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/altura_pokemon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
